k8s/onlychat/eks/external-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-grafana
  namespace: default
spec:
  type: ExternalName
  externalName: prometheus-grafana.monitoring.svc.cluster.local
