k8s/onlychat/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: "www.litcodev.com"
      http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-server-service
                port:
                  number: 8010
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: front-server-service
                port:
                  number: 8080
#          - path: /(.*)
#            pathType: ImplementationSpecific
#            backend:
#              service:
#                name: user-server-service
#                port:
#                  number: 8010
  tls:
    - hosts:
        - www.litcodev.com
      secretName: hbgm-server-cert
